--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -1,27 +1,109 @@
-<head>
-  <title>My Landing Page</title>
-  <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
-</head>
-
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>My Landing Page</h1>
-        <p>My Landing Page</p>
-
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Wedding Photographer</h5>
-        <p class="card-text">John Doe is a wedding photographer who specializes in capturing the beauty of weddings. He has been in business for over 10 years and has photographed hundreds of weddings.</p>
-        <a href="#" class="btn btn-primary">Learn more</a>
-      </div>
-    </div>
-  </div>
-</body>
+<html>
+  <head>
+    <title>Abeltrece Wedding Videographer</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta name="description" content="AbelTrece Wedding" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+    <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
+      <nav id="mainNav" class="navbar navbar-expand-md fixed-top navbar-light">
+          <div class="container"><button class="navbar-toggler navbar-toggler-right" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
+              <div id="navbarResponsive" class="collapse navbar-collapse">
+                  <h1>Abeltrece</h1>
+                  <ul class="navbar-nav ms-auto">
+                      <li class="nav-item nav-link"><a class="nav-link" href="#contact">contact</a></li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+      <section id="about" class="text-center content-section">
+          <div class="container-fluid d-flex justify-content-center align-items-center align-content-center video-parallax-container">
+              <div class="col-6">
+                  <h3><em><span style="color: rgb(0, 0, 0);">Wedding videography</span></em></h3>
+                  <p><br /><em><span style="color: rgb(0, 0, 0);">As a dedicated and passionate wedding videographer, my aim is to capture the true essence of your love and create a stunning visual masterpiece that brings your wedding day to life. With a keen eye for detail, technical expertise, and an artistic approach, I am committed to delivering a wedding video that surpasses your expectations and becomes a cherished keepsake for years to come. Let me tell your unique love story through the magic of videography, ensuring that every moment is beautifully preserved and cherished forever.</span></em></p>
+              </div><video loop muted>
+                  <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4" wp-acf="[{&#39;type&#39;:&#39;url&#39;,&#39;name&#39;:&#39;video&#39;,&#39;label&#39;:&#39;Video&#39;,&#39;wrapper&#39;:{&#39;width&#39;:30}}]" wp-attr="[{&#39;target&#39;:&#39;src&#39;,&#39;replace&#39;:&#39;%1&#39;}]" />
+              </video>
+          </div>
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-8 mx-auto">
+                      <h2>About US</h2>
+                      <p><br /><span style="color: rgb(0, 0, 0); background-color: rgba(67, 65, 65, 0);">Abel Trece Films is a vibrant and dynamic independent wedding videography business located in Mexico City. With a relentless passion for our craft, we specialize in crafting exquisite cinematic wedding videos that capture the essence of love and create lasting memories.</span></p>
+                      <p><br /><span style="color: rgb(0, 0, 0); background-color: rgba(247, 247, 248, 0);">At Abel Trece Films, our dedicated team of talented professionals takes great pride in their ability to weave together the most captivating moments of a couple&#39;s special day. With an artistic approach, we artfully capture the emotions, joy, and intimate details that make each wedding unique.</span></p>
+                      <p><br /><span style="color: rgb(0, 0, 0); background-color: rgba(247, 247, 248, 0);">Recognizing that every couple has their own story, Abel Trece Films takes the time to understand our clients&#39; vision and desires. We strive to create a personalized experience, tailoring each wedding video to reflect the couple&#39;s style, personality, and individual love story. The result is a breathtakingly beautiful and emotionally captivating film that transports viewers back to the magic of the wedding day.</span></p>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <section id="contact" class="text-center content-section">
+          <div class="container">
+              <div class="row">
+                  <div class="col-md-6 col-lg-6 offset-lg-1 mx-auto">
+                      <h2></h2>
+                      <p><span style="color: rgb(0, 0, 0);">Your journey begins here</span></p>
+                      <ul class="list-inline banner-social-buttons">
+                          <li class="list-inline-item"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-twitter fa-fw"></i><span class="network-name"> Twitter</span></button></li>
+                      </ul>
+                      <ul class="list-inline banner-social-buttons">
+                          <li class="list-inline-item"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">  Google+</span></button></li>
+                          <li class="list-inline-item"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-twitter fa-fw"></i><span class="network-name"> Twitter</span></button></li>
+                      </ul>
+                  </div>
+                  <div class="col">
+                      <section class="td-form">
+                          <div class="row td-form-wrapper">
+                              <div class="col-lg-11 td-glass">
+                                  <form class="td-form-wrapper">
+                                      <h1 class="text-center"><em><span style="font-weight: normal !important;">let&#39;s meet</span></em></h1>
+                                      <div class="form-group mb-3">
+                                          <div class="col-md-12"><label class="form-label" for="name">Name *</label>
+                                              <div class="d-flex"><i class="icon ion-person align-self-center"></i><input class="form-control d-flex" type="text" autocomplete="off" name="name" required placeholder="Treedax Services" /></div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group mb-3">
+                                          <div class="col-md-12"><label class="form-label" for="email">Email *</label>
+                                              <div class="d-flex"><i class="icon ion-ios-email align-self-center"></i><input class="form-control" type="text" autocomplete="off" name="phone" required placeholder="services@treedax.com" inputmode="email" /></div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group mb-3">
+                                          <div class="col-md-12"><label class="form-label" for="phone">Phone (optional)</label>
+                                              <div class="d-flex td-input-container"><i class="icon ion-ios-telephone align-self-center"></i><input class="form-control" type="text" autocomplete="off" placeholder="555-555-1212" name="phone" inputmode="tel" /></div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group mb-3">
+                                          <div class="col-md-12">
+                                              <div class="d-flex td-input-container"></div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group mb-3">
+                                          <div class="col-md-12"><label class="form-label" for="message">Message Details *</label>
+                                              <div class="d-flex td-input-container"><i class="icon ion-android-create align-self-center"></i><textarea class="form-control" placeholder="Add meaningful message here" name="message" rows="6" cols="50"></textarea></div>
+                                          </div>
+                                      </div>
+                                      <div class="form-group mb-3">
+                                          <div class="col-md-12"><button class="btn btn-dark float-end" type="submit">Send </button></div>
+                                      </div>
+                                  </form>
+                              </div>
+                          </div>
+                      </section>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <div class="map-clean"></div>
+      <footer>
+          <div class="container text-center">
+              <p>Copyright © AbelTrece 2023</p>
+          </div>
+      </footer>
+      <video id="background-video" autoplay loop muted>
+        <source src="landing_page/components/bnw-background.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+  </body>
+</html>
