--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -37,19 +37,26 @@
               </div>
           </div>
       </section>
-      <section id="contact" class="text-center content-section">
+      <section id="contact" style="background-color: rgba(0, 0, 0, 1);"class="text-center content-section mt-5 p-5">
           <div class="container">
               <div class="row">
                   <div class="col-md-6 col-lg-6 offset-lg-1 mx-auto">
-                      <h2></h2>
-                      <p><span style="color: rgb(255, 255, 255);">Your journey begins here</span></p>
-                      <ul class="list-inline banner-social-buttons">
-                          <li class="list-inline-item"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-twitter fa-fw"></i><span class="network-name"> Twitter</span></button></li>
-                      </ul>
-                      <ul class="list-inline banner-social-buttons">
-                          <li class="list-inline-item"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">  Google+</span></button></li>
-                          <li class="list-inline-item"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-twitter fa-fw"></i><span class="network-name"> Twitter</span></button></li>
-                      </ul>
+                    <h2></h2>
+                    <p><span style="color: rgb(255, 255, 255);">Your journey begins here</span></p>
+                    <ul class="list-inline banner-social-buttons">
+                      <li class="list-inline-item">
+                        <a href="https://www.instagram.com/films.abeltrece/" target="_blank" class="button" role="button">
+                          <i class="fa fa-instagram fa-fw"></i><span class="network-name"> INSTAGRAM </span>
+                        </a>
+                      </li>
+                    </ul>
+                    <ul class="list-inline banner-social-buttons">
+                      <li class="list-inline-item">
+                        <a href="https://vimeo.com/abeltrece" target="_blank" class="button" role="button">
+                          <i class="fa fa-vimeo fa-fw"></i><span class="network-name"> VIMEO</span>
+                        </a>
+                      </li>
+                    </ul>
                   </div>
                   <div class="col">
                       <section class="td-form">
@@ -78,12 +85,12 @@
                                           </div>
                                       </div>
                                       <div class="form-group mb-3">
-                                          <div class="col-md-12"><label style="color: rgb(255, 255, 255); class="form-label" for="message">Message Details *</label>
+                                          <div class="col-md-12"><label style="color: rgb(255, 255, 255)"; class="form-label" for="message">Message Details *</label>
                                               <div class="d-flex td-input-container"><i class="icon ion-android-create align-self-center"></i><textarea class="form-control" placeholder="Add meaningful message here" name="message" rows="6" cols="50"></textarea></div>
                                           </div>
                                       </div>
                                       <div class="form-group mb-3">
-                                          <div class="col-md-12"><button class="btn btn-dark float-end" type="submit">Send </button></div>
+                                          <div class="col-md-12"><button class="btn btn-dark float-end" type="submit">Send</button></div>
                                       </div>
                                   </form>
                               </div>
@@ -94,15 +101,11 @@
           </div>
       </section>
       <div class="map-clean"></div>
-      <footer>
-          <div style="color: rgb(255, 255, 255);" class="container text-center">
-              <p>Copyright © AbelTrece 2023</p>
+      <footer style="background-color: black;">
+          <div style="color: rgb(255, 255, 255); background-color: rgba(0, 0, 0, 0.2);" class="container text-center">
+              <p>Copyright ©AbelTrece 2023</p>
           </div>
       </footer>
-      <video id="background-video" autoplay loop muted>
-        <source src="landing_page/components/bnw-background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
       <script>
         // Get the navbar element
         const navbar = document.querySelector('.navbar');
