--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -66,17 +66,17 @@
                                       <h1 class="text-center"><em><span style="color: rgb(255, 255, 255);" font-weight: normal !important;">let&#39;s meet</span></em></h1>
                                       <div class="form-group mb-3">
                                           <div class="col-md-12"><label style="color: rgb(255, 255, 255);" class="form-label" for="name">Name *</label>
-                                              <div class="d-flex"><i class="icon ion-person align-self-center"></i><input class="form-control d-flex" type="text" autocomplete="off" name="name" required placeholder="Treedax Services" /></div>
+                                              <div class="d-flex"><i class="icon ion-person align-self-center"></i><input class="form-control d-flex" type="text" autocomplete="off" name="name" required placeholder="Abel Lopez" /></div>
                                           </div>
                                       </div>
                                       <div class="form-group mb-3">
                                           <div class="col-md-12"><label style="color: rgb(255, 255, 255);" class="form-label" for="email">Email *</label>
-                                              <div class="d-flex"><i class="icon ion-ios-email align-self-center"></i><input class="form-control" type="text" autocomplete="off" name="phone" required placeholder="services@treedax.com" inputmode="email" /></div>
+                                              <div class="d-flex"><i class="icon ion-ios-email align-self-center"></i><input class="form-control" type="text" autocomplete="off" name="phone" required placeholder="abel@lopez.com" inputmode="email" /></div>
                                           </div>
                                       </div>
                                       <div class="form-group mb-3">
                                           <div class="col-md-12"><label style="color: rgb(255, 255, 255);" class="form-label" for="phone">Phone (optional)</label>
-                                              <div class="d-flex td-input-container"><i class="icon ion-ios-telephone align-self-center"></i><input class="form-control" type="text" autocomplete="off" placeholder="555-555-1212" name="phone" inputmode="tel" /></div>
+                                              <div class="d-flex td-input-container"><i class="icon ion-ios-telephone align-self-center"></i><input class="form-control" type="text" autocomplete="off" placeholder="123-456-7890" name="phone" inputmode="tel" /></div>
                                           </div>
                                       </div>
                                       <div class="form-group mb-3">
@@ -86,7 +86,7 @@
                                       </div>
                                       <div class="form-group mb-3">
                                           <div class="col-md-12"><label style="color: rgb(255, 255, 255)"; class="form-label" for="message">Message Details *</label>
-                                              <div class="d-flex td-input-container"><i class="icon ion-android-create align-self-center"></i><textarea class="form-control" placeholder="Add meaningful message here" name="message" rows="6" cols="50"></textarea></div>
+                                              <div class="d-flex td-input-container"><i class="icon ion-android-create align-self-center"></i><textarea class="form-control" placeholder="Tell us about your wedding vision" name="message" rows="6" cols="50"></textarea></div>
                                           </div>
                                       </div>
                                       <div class="form-group mb-3">
